[package]
name = "stark_pyrust_chain"
version = "0.1.0"
edition = "2021"

[lib]
name = "stark_pyrust_chain"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py39"] }
starknet = "0.9.0"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
rand = "0.8.5"
anyhow = "1.0"
base64 = "0.21.7"
hex = "0.4.3"
blake3 = "1.5.0"
url = "2.5.0"
governor = "0.6.0"
nonzero_ext = "0.3.0"
dotenv = "0.15.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
